--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     />
 
     <!--==================== SWIPER CSS ====================-->
-    <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 
     <!--==================== CSS ====================-->
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <title>Adel Awad | Portfolio</title>
   </head>
@@ -47,8 +47,8 @@
               </a>
             </li>
             <li class="nav__item">
-              <a href="#portfolio" class="nav__link">
-                <i class="uil uil-scenery nav__icon"></i> Portfolio
+              <a href="#activites" class="nav__link">
+                <i class="uil uil-scenery nav__icon"></i> Activites
               </a>
             </li>
             <li class="nav__item">
@@ -126,7 +126,7 @@
                     class="home__blob-img"
                     x="12"
                     y="28"
-                    xlink:href="/assets/img/perfil.png"
+                    xlink:href="img/perfil.png"
                   />
                 </g>
               </svg>
@@ -135,8 +135,8 @@
               <h1 class="home__title">Hi, I'am Adel</h1>
               <h2 class="home__subtitle">Computer Science Student</h2>
               <p class="home__description">
-                High level experience in web design and development knowledge,
-                producing quality work.
+                Wellcome to my Portfolio website I am Adel Awad Al-Kazzaz a
+                student at the Faculty of Science, Assiut University.
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me <i class="uil uil-message button__icon"></i>
@@ -159,13 +159,13 @@
         <span class="section__subtitle">My introduction</span>
 
         <div class="about__container container grid">
-          <img src="/assets/img/about.jpg" alt="" class="about__img" />
+          <img src="img/about.jpg" alt="" class="about__img" />
 
           <div class="about__data">
             <p class="about__description">
-              Web developer, with extensive knowledge and years of experience,
-              working in web technologies and Ui / Ux design, delivering quality
-              work.
+              I am a student at the Faculty of Science,
+              Assiut University. and I study Computer science
+              and I'm Interested about Artificial intelligence, Machine learning and Quantum Computing.
             </p>
             <div class="about__info">
               <div>
@@ -194,14 +194,9 @@
             </div>
 
             <div class="about__buttons">
-              <a
-                download=""
-                href="/assets/pdf/Alexa-Cv.pdf"
-                class="button button--flex"
-              >
-                Download CV<i
-                  class="uil uil-arrow-circle-down button__icon"
-                ></i>
+              <a download=""href="/pdf/Alexa-Cv.pdf"class="button button--flex">
+                Download CV
+                <i class="uil uil-arrow-circle-down button__icon"></i>
               </a>
             </div>
           </div>
@@ -332,10 +327,10 @@
                   <h1 class="skills__title">Problem Solving</h1>
                   <span class="skill__subtitle">less Then 1 years</span>
                 </div>
-
+  
                 <i class="uil uil-angle-down skills__arrow"></i>
               </div>
-
+  
               <div class="skills__list grid">
                 <div class="skills__data">
                   <div class="skills__titles">
@@ -346,7 +341,7 @@
                     <span class="skills__percentage skills__cpp"></span>
                   </div>
                 </div>
-
+  
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="siklls__name">Python</h3>
@@ -356,7 +351,7 @@
                     <span class="skills__percentage skills__pythonpro"></span>
                   </div>
                 </div>
-
+  
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="siklls__name">Java</h3>
@@ -618,150 +613,115 @@
 
           <!--==================== SERVICES 3 ====================-->
           <div class="services__content">
-                        <div>
-                            <i class="uil uil-arrow services__icon"></i>
-                            <h3 class="services__title">Python <br> develop</h3>
-                        </div>
+            <div>
+              <i class="uil uil-arrow services__icon"></i>
+              <h3 class="services__title">
+                Python <br />
+                develop
+              </h3>
+            </div>
 
-                        <span class="button button--flex button--small button--link services__button">
-                            View More
-                            <i class="uil uil-arrow-right button__icon"></i>
-                        </span>
+            <span
+              class="button button--flex button--small button--link services__button"
+            >
+              View More
+              <i class="uil uil-arrow-right button__icon"></i>
+            </span>
 
-                        <div class="services__modal">
-                            <div class="services__modal-content">
-                                <h4 class="services__modal-title">Python <br> develop</h4>
-                                <i class="uil uil-times services__modal-close"></i>
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">
+                  Python <br />
+                  develop
+                </h4>
+                <i class="uil uil-times services__modal-close"></i>
 
-                                <ul class="services__modal-services grid">
-                                    <li class="services__modal-service">
-                                        <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I develop with Python</p>
-                                    </li>
-                                    <li class="services__modal-service">
-                                        <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>script development.</p>
-                                    </li>
-                                </ul>
-
-                            </div>
-                        </div>
-                    </div>
-        </div>
-      </section>
-
-      <!--==================== PORTFOLIO ====================-->
-      <section class="portfolio section" id="portfolio">
-        <h2 class="section__title">Portfolio</h2>
-        <span class="section__subtitle">Most recent work</span>
-
-        <div class="portfolio__container container swiper-container">
-          <div class="swiper-wrapper">
-            <!--==================== PORTFOLIO 1 ====================-->
-            <div class="portfolio__content grid swiper-slide">
-              <img
-                src="/assets/img/portfolio1.jpg"
-                alt=""
-                class="portfolio__img"
-              />
-
-              <div class="portfolio__data">
-                <h3 class="portfolio__title">Modern website</h3>
-                <p class="portfolio__description">
-                  Website adaptable to all devices, with ui components and
-                  animated interactions.
-                </p>
-                <a
-                  href="#"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  Demo
-                  <i class="uil uil-arrow-right button__icon"></i>
-                </a>
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I develop with Python</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>script development.</p>
+                  </li>
+                </ul>
               </div>
             </div>
-            <!--==================== PORTFOLIO 2 ====================-->
-            <div class="portfolio__content grid swiper-slide">
-              <img
-                src="/assets/img/portfolio2.jpg"
-                alt=""
-                class="portfolio__img"
-              />
-
-              <div class="portfolio__data">
-                <h3 class="portfolio__title">Brand Design</h3>
-                <p class="portfolio__description">
-                  Website adaptable to all devices, with ui components and
-                  animated interactions.
-                </p>
-                <a
-                  href="#"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  Demo
-                  <i class="uil uil-arrow-right button__icon"></i>
-                </a>
-              </div>
-            </div>
-            <!--==================== PORTFOLIO 3 ====================-->
-            <div class="portfolio__content grid swiper-slide">
-              <img
-                src="/assets/img/portfolio3.jpg"
-                alt=""
-                class="portfolio__img"
-              />
-
-              <div class="portfolio__data">
-                <h3 class="portfolio__title">logo Design</h3>
-                <p class="portfolio__description">
-                  Website adaptable to all devices, with ui components and
-                  animated interactions.
-                </p>
-                <a
-                  href="#"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  Demo
-                  <i class="uil uil-arrow-right button__icon"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- Add Arrows -->
-          <div class="swiper-button-next">
-            <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
-          </div>
-          <div class="swiper-button-prev">
-            <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
-          </div>
-          <!-- Add Pagination -->
-          <div class="swiper-pagination"></div>
-        </div>
-      </section>
-
-      <!--==================== PROJECT IN MIND ====================-->
-      <section class="project section">
-        <div class="project__bg">
-          <div class="project__container container grid">
-            <div class="project__data">
-              <h2 class="project__title">You have a new project</h2>
-              <p class="project__description">
-                Contact me now and get a 30% discount on your new project.
-              </p>
-              <a href="#contact" class="button button--flex button--white">
-                Contact Me
-                <i class="uil uil-message project__icon button__icon"></i>
-              </a>
-            </div>
-
-            <img src="/assets/img/project.png" alt="" class="project__img" />
           </div>
         </div>
       </section>
 
-      <!--==================== TESTIMONIAL ====================-->
+      <!--==================== Edit [PORTFOLIO] => [without swiper] ====================-->
+      <section class="activites" id="activites">
+          <h2 class="section__title">Activites</h2>
+          <span class="section__subtitle">Most recent work</span>
+          <div class="activites__container container grid">
+              <div class="project-card">
+                  <div class="project-image">
+                      <img src="img/crt1.jpg" />
+                  </div>
+                  <div class="project-info">
+                      <strong class="project-title">
+                          <span>Introduction to programming using python</span>
+                      </strong>
+                      <p class="project-category">
+                          Training certificate from the period 12 to 16 September 2022
+                          presented by the Ministry of Youth and Sports and Microsoft to
+                          complete the training program Introduction to Python
+                      </p>
+                  </div>
+              </div>
+              <div class="project-card">
+                  <div class="project-image">
+                      <img src="img/crt2.jpg" />
+                  </div>
+                  <div class="project-info">
+                      <strong class="project-title">
+                          <span>Introduction to Machine learning & Ai</span>
+                      </strong>
+                      <p class="project-category">
+                          Attended certificate "Introduction to Machine Learning & AI"
+                          26th Feb.2022 presented by Google Developer Student Clubs
+                      </p>
+                  </div>
+              </div>
+              <div class="project-card">
+                  <div class="project-image">
+                      <img src="img/crt3.jpg" />
+                  </div>
+                  <div class="project-info">
+                      <strong class="project-title">
+                          <span>MOS Specialist in PowerPoint</span>
+                      </strong>
+                      <p class="project-category">
+                          Has successfully completed the requirements to be recognized as
+                          a Microsoft Office Specialist for Office PowerPoint ®2010. 27
+                          July.2017 presented by Microsoft
+                      </p>
+                  </div>
+              </div>
+              <div class="project-card">
+                  <div class="project-image">
+                      <img src="img/crt4.jpg" />
+                  </div>
+                  <div class="project-info">
+                      <strong class="project-title">
+                          <span>First Aid</span>
+                      </strong>
+                      <p class="project-category">
+                          Has attended the "First Aid" training Program During the period
+                          from February 28 to March 1, 2022, Assiut University Faculty of
+                          Science
+                      </p>
+                  </div>
+              </div>
+        </div>
+      </section>
+
+      <!--==================== Edit [FeedBack] => [Activits] ====================-->
       <section class="testimonial section">
-        <h2 class="section__title">Testimonial</h2>
+        <h2 class="section__title">Recommendation</h2>
         <span class="section__subtitle">My client saying</span>
 
         <div class="testimonial__container container swiper-container">
@@ -771,7 +731,7 @@
               <div class="testimonial__data">
                 <div class="testimonial__header">
                   <img
-                    src="/assets/img/testimonial1.jpg"
+                    src="img/testimonial1.jpg"
                     alt=""
                     class="testimonial__img"
                   />
@@ -798,7 +758,7 @@
               <div class="testimonial__data">
                 <div class="testimonial__header">
                   <img
-                    src="/assets/img/testimonial2.jpg"
+                    src="img/testimonial2.jpg"
                     alt=""
                     class="testimonial__img"
                   />
@@ -825,12 +785,12 @@
               <div class="testimonial__data">
                 <div class="testimonial__header">
                   <img
-                    src="/assets/img/testimonial3.jpg"
+                    src="img/testimonial3.jpg"
                     alt=""
                     class="testimonial__img"
                   />
                   <div>
-                    <h3 class="testimonial__name">Mohamed AbuBakr</h3>
+                    <h3 class="testimonial__name">AbuBakr</h3>
                     <span class="testimonial__client">Client</span>
                   </div>
                 </div>
@@ -883,40 +843,13 @@
                 >
               </div>
             </div>
-          </div>
-
-          <form action="" class="contact__form grid">
-            <div class="contact__inputs grid">
-              <div class="contact__content">
-                <label for="" class="contact__label">Name</label>
-                <input type="text" class="contact__input" />
-              </div>
-              <div class="contact__content">
-                <label for="" class="contact__label">Email</label>
-                <input type="email" class="contact__input" />
-              </div>
-            </div>
-            <div class="contact__content">
-              <label for="" class="contact__label">Project</label>
-              <input type="text" class="contact__input" />
-            </div>
-            <div class="contact__content">
-              <label for="" class="contact__label">Message</label>
-              <textarea
-                name=""
-                id=""
-                cols="0"
-                rows="7"
-                class="contact__input"
-              ></textarea>
-            </div>
-            <div>
+            <div class="contact__button">
               <a href="#" class="button button--flex">
                 Send Message
                 <i class="uil uil-message button__icon"></i>
               </a>
             </div>
-          </form>
+          </div>
         </div>
       </section>
     </main>
@@ -935,7 +868,7 @@
               <a href="#services" class="footer__link">Services</a>
             </li>
             <li>
-              <a href="#portfolio" class="footer__link">Portfolio</a>
+              <a href="#activites" class="footer__link">Activites</a>
             </li>
             <li>
               <a href="#contact" class="footer__link">Contact</a>
@@ -963,9 +896,9 @@
     </a>
 
     <!--==================== SWIPER JS ====================-->
-    <script src="/assets/js/swiper-bundle.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
 
     <!--==================== MAIN JS ====================-->
-    <script src="/assets/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
