--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
                 </div>
 
                 <div>
-                  <h3 class="qualification__title">Computer Science 2</h3>
-                  <span class="qualification__subtitle">Peru - University</span>
+                  <h3 class="qualification__title">BSc. Computer Science</h3>
+                  <span class="qualification__subtitle">Assiut - University</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
                     2021 ~ 2025
@@ -434,38 +434,21 @@
               <!--==================== QUALIFICATION 3 ====================-->
               <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Computer Science 3</h3>
-                  <span class="qualification__subtitle">Peru - University</span>
+                  <h3 class="qualification__title">ALX Scholarships Student</h3>
+                  <span class="qualification__subtitle">ALX</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2021 ~ 2025
+                    Started the 08/2023
+                    <br>
+                    Ending the 09/2024
                   </div>
                 </div>
 
                 <div>
                   <span class="qualification__rounder"></span>
-                  <span class="qualification__line"></span>
                 </div>
               </div>
 
-              <!--==================== QUALIFICATION 4 ====================-->
-              <div class="qualification__data">
-                <div></div>
-
-                <div>
-                  <span class="qualification__rounder"></span>
-                  <!-- <span class="qualification__line"></span> -->
-                </div>
-
-                <div>
-                  <h3 class="qualification__title">Computer Science 4</h3>
-                  <span class="qualification__subtitle">Peru - University</span>
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2021 ~ 2025
-                  </div>
-                </div>
-              </div>
             </div>
 
             <!--==================== QUALIFICATION CONTENT 2 ====================-->
@@ -477,7 +460,7 @@
                   <span class="qualification__subtitle">lucation</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2021 ~ 2025
+                    0000 ~ 0000
                   </div>
                 </div>
 
@@ -501,7 +484,7 @@
                   <span class="qualification__subtitle">lucation</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2021 ~ 2025
+                    0000 ~ 0000
                   </div>
                 </div>
               </div>
@@ -513,7 +496,7 @@
                   <span class="qualification__subtitle">lucation</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2021 ~ 2025
+                    0000 ~ 0000
                   </div>
                 </div>
 
