--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
 
             <div class="about__buttons">
-              <a download=""href="pdf/Adel_CV_V1.pdf"class="button button--flex">
+              <a download=""href="https://github.com/Adelkazzaz/portfolio-website-V2/blob/main/pdf/Adel_CV_V1.pdf"class="button button--flex">
                 Download CV
                 <i class="uil uil-arrow-circle-down button__icon"></i>
               </a>
