--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
               <!--==================== QUALIFICATION 1 ====================-->
               <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Computer Science</h3>
-                  <span class="qualification__subtitle">Peru - University</span>
+                  <h3 class="qualification__title">BSc. Computer Science</h3>
+                  <span class="qualification__subtitle">Assiut - University</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
                     2021 ~ 2025
@@ -422,18 +422,6 @@
                 </div>
 
                 <div>
-                  <h3 class="qualification__title">BSc. Computer Science</h3>
-                  <span class="qualification__subtitle">Assiut - University</span>
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2021 ~ 2025
-                  </div>
-                </div>
-              </div>
-
-              <!--==================== QUALIFICATION 3 ====================-->
-              <div class="qualification__data">
-                <div>
                   <h3 class="qualification__title">ALX Scholarships Student</h3>
                   <span class="qualification__subtitle">ALX</span>
                   <div class="qualification__calendar">
@@ -442,6 +430,14 @@
                     <br>
                     Ending the 09/2024
                   </div>
+                </div>
+              </div>
+
+              <!--==================== QUALIFICATION 3 ====================-->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">learner ...</h3>
+                  <span class="qualification__subtitle">Lifelong</span>
                 </div>
 
                 <div>
