--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="css/styles.css" />
 
     <title>Adel Awad | Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/img/logo2.png" />
+
   </head>
   <body>
     <!--==================== HEADER ====================-->
