--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     class="home__blob-img"
                     x="12"
                     y="28"
-                    xlink:href="img/perfil.png"
+                    xlink:href="img/new_perfil.png"
                   />
                 </g>
               </svg>
@@ -161,7 +161,7 @@
         <span class="section__subtitle">My introduction</span>
 
         <div class="about__container container grid">
-          <img src="img/about.jpg" alt="" class="about__img" />
+          <img src="img/new_about.jpg" alt="" class="about__img" />
 
           <div class="about__data">
             <p class="about__description">
