Update portfolio content and contact link in index.html

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
               <h1 class="home__title">Hi, I'am Adel</h1>
               <h2 class="home__subtitle">Computer Science Student</h2>
               <p class="home__description">
-                Wellcome to my Portfolio website I am Adel Awad Al-Kazzaz a
-                student at the Faculty of Science, Assiut University.
+                "Welcome to my portfolio! I’m Adel Awad Al-Kazzaz, a Software Engineer
+                passionate about machine learning and data-driven innovation."
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me <i class="uil uil-message button__icon"></i>
@@ -165,9 +165,10 @@
 
           <div class="about__data">
             <p class="about__description">
-              I am a student at the Faculty of Science,
-              Assiut University. and I study Computer science
-              and I'm Interested about Artificial intelligence, Machine learning and Quantum Computing.
+              "Enthusiastic about machine learning and leveraging the power of
+              data to drive innovation. Interested in understanding the hidden 'i'
+              of AI, with foundational skills in back-end development. Working to
+              understand the software life cycle and data flow."
             </p>
             <div class="about__info">
               <div>
@@ -187,7 +188,7 @@
               </div>
 
               <div>
-                <span class="about__info-title">00+</span>
+                <span class="about__info-title">01</span>
                 <span class="about__info-name"
                   >Companies <br />
                   worked</span
@@ -805,7 +806,9 @@
               <i class="uil uil-phone contact__icon"></i>
               <div>
                 <h3 class="contact__title">Call Me</h3>
-                <span class="contact__subtitle">+20 128-0220-353</span>
+                <a href="https://wa.me/+201280220353" target="_blank">
+                  <span class="contact__subtitle">+20 128-0220-353</span>
+                </a>                
               </div>
             </div>
             <div class="contact__information">
