Refine portfolio introduction and about section text in index.html

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
               <h1 class="home__title">Hi, I'am Adel</h1>
               <h2 class="home__subtitle">Computer Science Student</h2>
               <p class="home__description">
-                "Welcome to my portfolio! I’m Adel Awad Al-Kazzaz, a Software Engineer
-                passionate about machine learning and data-driven innovation."
+                Welcome to my portfolio! I’m Adel Awad Al-Kazzaz, a Software Engineer
+                passionate about machine learning and data-driven innovation.
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me <i class="uil uil-message button__icon"></i>
@@ -165,10 +165,10 @@
 
           <div class="about__data">
             <p class="about__description">
-              "Enthusiastic about machine learning and leveraging the power of
-              data to drive innovation. Interested in understanding the hidden 'i'
-              of AI, with foundational skills in back-end development. Working to
-              understand the software life cycle and data flow."
+              Experienced in Software and machine learning and leveraging
+              the power of data to drive innovation. Interested in understanding
+              the hidden 'i' of AI, with foundational skills in back-end development.
+              Working to understand the software life cycle and data flow.
             </p>
             <div class="about__info">
               <div>
