--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             <div>
               <i class="uil uil-web-grid services__icon"></i>
               <h3 class="services__title">
-                Portfolio <br />
+                Web <br />
                 Design
               </h3>
             </div>
@@ -535,7 +535,7 @@
             <div class="services__modal">
               <div class="services__modal-content">
                 <h4 class="services__modal-title">
-                  Portfolio <br />
+                  Web <br />
                   Design
                 </h4>
                 <i class="uil uil-times services__modal-close"></i>
@@ -559,8 +559,8 @@
             <div>
               <i class="uil uil-pen services__icon"></i>
               <h3 class="services__title">
-                logo <br />
-                Designer
+                Machine <br />
+                Learning Models
               </h3>
             </div>
 
@@ -574,19 +574,19 @@
             <div class="services__modal">
               <div class="services__modal-content">
                 <h4 class="services__modal-title">
-                  logo <br />
-                  Designer
+                Machine <br />
+                Learning Models
                 </h4>
                 <i class="uil uil-times services__modal-close"></i>
 
                 <ul class="services__modal-services grid">
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>I design logo for brand</p>
+                    <p>Create Machine Learning Models</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>3D and 2d logo design.</p>
+                    <p>Deep Learning Models</p>
                   </li>
                 </ul>
               </div>
