Update project details and images in index.html

--- a/index.html
+++ b/index.html
@@ -641,30 +641,37 @@
           <div class="activites__container container grid">
               <div class="project-card">
                   <div class="project-image">
-                      <img src="img/crt1.jpg" />
+                      <img src="img/ModelAccuracy.png" />
                   </div>
                   <div class="project-info">
                       <strong class="project-title">
-                          <span>Introduction to programming using python</span>
+                          <span>Brain Tumor Detection Using Custom ResNet152V2</span>
                       </strong>
                       <p class="project-category">
-                          Training certificate from the period 12 to 16 September 2022
-                          presented by the Ministry of Youth and Sports and Microsoft to
-                          complete the training program Introduction to Python
+                        Brain Tumor Detection Using Custom ResNet152V2
+                        Brain Tumor Detection Using Custom ResNet152V2
+                        Aug 2024 - Sep 2024Aug 2024 - Sep 2024
+                        Reimplemented a custom ResNet152V2 model with altered 
+                        identity and convolutional layers and developed a CNN for 
+                        classifying brain tumors from MRI images using TensorFlow and 
+                        Keras. The project included extensive data preprocessing, model 
+                        development, training, and evaluation. Test accuracy: 91.99%
                       </p>
                   </div>
               </div>
               <div class="project-card">
                   <div class="project-image">
-                      <img src="img/crt2.jpg" />
+                      <img src="img/Rag.png" />
                   </div>
                   <div class="project-info">
                       <strong class="project-title">
-                          <span>Introduction to Machine learning & Ai</span>
+                          <span>Mini-RAG - RAG Model for Question Answering</span>
                       </strong>
                       <p class="project-category">
-                          Attended certificate "Introduction to Machine Learning & AI"
-                          26th Feb.2022 presented by Google Developer Student Clubs
+                        Developed a production-ready app using FastAPI, LangChain, 
+                        OpenAI API, and Qdrant Client for efficient question-answering. 
+                        Managed databases with Dockerized MongoDB and streamlined 
+                        deployment using Uvicorn and Pydantic.
                       </p>
                   </div>
               </div>
