--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                       </p>
                   </div>
               </div>
-              <div class="project-card">
+              <!-- <div class="project-card">
                   <div class="project-image">
                       <img src="img/crt3.jpg" />
                   </div>
@@ -704,7 +704,7 @@
                           Science
                       </p>
                   </div>
-              </div>
+              </div> -->
         </div>
       </section>
 
