Rename section title from "Activites" to "Projects" in index.html

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 
       <!--==================== Edit [PORTFOLIO] => [without swiper] ====================-->
       <section class="activites" id="activites">
-          <h2 class="section__title">Activites</h2>
+          <h2 class="section__title">Projects</h2>
           <span class="section__subtitle">Most recent work</span>
           <div class="activites__container container grid">
               <div class="project-card">
